--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,9 +29,6 @@
 <!-- <div class="container" align = center> -->
   <router-outlet></router-outlet>
 <!-- </div> -->
-
-
-
   <div  class="fixed-footer" align="center" style="width: 100%; left: 0; ">
     <span style="color: rgb(30, 101, 163);">Developed & Maintained by: <a href="https://www.erainfotechbd.com/" >ERA InfoTech Ltd. </a> &nbsp; All rights reserved 2021 @erainfotechbd </span>
   </div>
@@ -47,36 +44,25 @@
               <input type="text" placeholder="Search.." style="padding:5px; ">
             </td>
             <td>
-              <div >
-           
+              <div >           
             <details style="display: inline; padding: auto; color: rgb(0, 0, 0);">
             <summary style="display: inline; color: rgb(0, 0, 0);">
-              <img src="../assets/user-icon-png-pnglogocom.png" style="width:20px; display: inline;"> &nbsp; <h4 style="display: inline;">A. S. M. Radwan</h4>
-            </summary>
-          
-              
+              <img src="../assets/user-icon-png-pnglogocom.png" style="width: 15px; display: inline; padding-top: 5px;"> &nbsp; <h4 style="display: inline;">A. S. M. Radwan</h4>
+            </summary>    
               <ul align=center>
                 <li  style="display: inline;"  align=center>
-                    <a    href="#1"  ><span class="icon entypo-cog scnd-font-color"  style="display: inline;"  align=center></span>Settings</a>
+                    <a    href="auth/login"  ><span class="icon entypo-cog scnd-font-color"  style="display: inline;"  align=center></span>Settings</a>
                 </li> &nbsp;
                 <li  style="display: inline;"  align=center>
-                    <a    href="#3" ><span class="icon fontawesome-envelope scnd-font-color"  style="display: inline;"  align=center></span>My Blogs</a>
-                
+                    <a    href="auth/login" ><span class="icon fontawesome-envelope scnd-font-color"  style="display: inline;"  align=center></span>My Blogs</a>
                 </li> 
-  
             </ul>
              </details>
-         
             </div>
             </td>
         </tr>
         <tr style="height:5px; display: inline;">
-       
-            <td>   
-              
-                  
-          
-     
+   <td>           
  <nav class="nav">
   <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation"/>
   <label class="nav__trigger-finger" for="trigger">
@@ -143,18 +129,11 @@
         </span>
       </a>
     </li>
-  
   </ul>
 </nav>
-
 <main>
-
 </main>
-            </td>
-        </tr>
-        
+   </td>
+    </tr>
     </table>
   </div>
-
-
-
